--- a/templates/gemset_create.sh.j2
+++ b/templates/gemset_create.sh.j2
@@ -1,8 +1,17 @@
-source $HOME/{{ profile }}
-rbenv gemset create {{ ruby_ver }} cfme
-cd $HOME.rbenv/versions/{{ ruby_ver }}/gemsets/cfme
->.rbenv-gemsets <<<cfme
+#!/bin/bash
+
+# Make sure we have the ruby environment loaded
+if [ -f $HOME/{{ profile }} ]; then
+  source $HOME/{{ profile }}
+fi
+
+cd $HOME/{{ rbenv_dir }}/plugins
+rbenv gemset create {{ ruby_ver }} {{ gemset }}
+cd $HOME/{{ rbenv_dir }}/versions/{{ ruby_ver }}/gemsets/{{ gemset }}
+>.rbenv-gemsets <<<{{ gemset }}
 cd {{ vmdb_dir }}
->.rbenv-gemsets <<<cfme
+>.rbenv-gemsets <<<{{ gemset }}
 rbenv gemset active
+rbenv rehash
+rbenv local {{ ruby_ver }}
 rbenv rehash
