updated docs, cleaned up comments

--- a/templates/rake_tasks.sh.j2
+++ b/templates/rake_tasks.sh.j2
@@ -1,6 +1,7 @@
 #!/bin/bash
 
 # Make sure we have the ruby environment loaded
+# FIXME: j2 template var {{ profile }} not resolving in this file
 if [ -f $HOME/.bash_profile ]; then
   source $HOME/.bash_profile
 fi
